--- a/style.scss
+++ b/style.scss
@@ -55,12 +55,18 @@ header {
       color: $light;
     }
 
+    .individual-plan {
+      font-size: 10px;
+      margin-top: 30px;
+    }
+
     img {
       height: 420px;
     }
 
     button {
       border-radius: 50px;
+      margin-top: 30px
     }
     
   }
