--- a/style.css
+++ b/style.css
@@ -62,14 +62,18 @@ header nav a {
   height: 520px;
   text-align: center;
 }
+#go-premium h2 {
+  font-size: 30px;
+}
 #go-premium .gopremium-icons {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 30px;
+  gap: 200px;
 }
 #go-premium .gopremium-icons img {
   height: 150px;
+  margin-top: 30px;
 }
 
 #footer {
